<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/useThisFragmentID"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/top_login_layout" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:gravity="center">

                <include layout="@layout/lower_login_layout" />

            </RelativeLayout>

        </RelativeLayout>
        <include layout="@layout/progress_bar_layout"/>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>