...

    <string name="user_status_fmt">User: %s</string>
    <string name="user_title_text">User Sign In</string>

    <!--Hints-->
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_forgot_password">Forgot your password ?</string>
    <string name="hint_register">Don\'t have an account? Register here</string>
    <string name="hint_email">Email</string>
    <string name="search_Hint">Search</string>

    <!--Button texts-->
    <string name="btn_log_in">Sign in</string>
...

    <!--Forgot password fragment strings -->

    <string name="hint_forgot_password_email">Enter your email here</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_receive_text">Your password will be sent to your email</string>
    <string name="button_send_password">Send Mail</string>
    <string name="confirm_sing_out">Are you sure you want to SignOut?</string>
    <string name="signing_out">Signing Out…</string>
    <string name="post">Post</string>

    <!--Login layout-->

...
